--- a/index.html
+++ b/index.html
@@ -16,13 +16,22 @@
      <img src='https://s3.328888.xyz/2022/08/16/hpvFJ.png' alt="photo" width="224px" height="224px">
     </div>
 
+   <div style="padding: 15px; max-width: 500px; margin: auto">
+   <h2 style="text-align: center"> 个人简介</h2>
+    <p> <b>姓名：</b>郑嘉毅&emsp;&emsp;&emsp;&emsp;&emsp; <b>民族：</b>汉族&emsp;&emsp;&emsp;&emsp;&emsp;<b>籍贯：</b>广东汕头
+    <p> <b>出生年月：</b>1994年12月 &emsp;&emsp;&emsp;&emsp;&emsp;<b>政治面貌：</b>共青团员</p>
+    <p> <b>联系电话：</b>18819452245  &emsp;&emsp;&emsp;&emsp;<b>电子邮箱：</b>@qq.com</p> 
+   </div>
+   <p style="text-align: center; line-height:0px"><b>---------------------------------</b></p> 
+   
+
    <div style="
      max-width: 500px;
      margin: 0px auto;
      padding: 20px;
      line-height:;
      ">
-   <h2 style="text-align: center;"> 教育经历</h1>
+   <h2 style="text-align: center;"> 教育经历</h2>
     <p>2013年9月~2017年6月  华南理工大学 环境工程（全英班） 工学学士 </p>
     <p> 2017年9月~2018年8月  华南理工大学 环境工程           硕转博</p>
     <p> 2018年9月~2022年9月  华南理工大学 环境科学与工程     工学博士</p>
