--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
    <div style="padding: 15px; max-width: 500px; margin: auto">
    <h2 style="text-align: center"> 个人简介</h2>
-    <p> <b>姓名：</b>郑嘉毅&emsp;&emsp;&emsp;&emsp;&emsp; <b>民族：</b>汉族&emsp;&emsp;&emsp;&emsp;&emsp;<b>籍贯：</b>广东汕头
-    <p> <b>出生年月：</b>1994年12月 &emsp;&emsp;&emsp;&emsp;&emsp;<b>政治面貌：</b>共青团员</p>
-    <p> <b>联系电话：</b>18819452245  &emsp;&emsp;&emsp;&emsp;<b>电子邮箱：</b>@qq.com</p> 
+    <p> <b>姓名：</b>郑嘉毅&emsp;&emsp;<b>民族：</b>汉族&emsp;&emsp;<b>籍贯：</b>广东汕头
+    <p> <b>出生年月：</b>1994年12月 &emsp;&emsp;&emsp;<b>政治面貌：</b>共青团员</p>
+    <p> <b>联系电话：</b>18819452245  &emsp;&emsp;<b>电子邮箱：</b>136816350@qq.com</p> 
    </div>
    <p style="text-align: center; line-height:0px"><b>---------------------------------</b></p> 
    
