--- a/index.html
+++ b/index.html
@@ -41,19 +41,32 @@
    
    <div style="padding: 15px">
    <h2 style="text-align: center"> 发表论文</h2>
-    <p> [1] Debromination of polybrominated diphenyl ethers (PBDEs) by zero valent zinc: Mechanisms and predicting descriptors, <i>Journal of Hazardous Materials</i> (SCI一区IF: 10.588), 2018年, 第七作者。<a href="https://doi.org/10.1016/j.jhazmat.2018.03.038">论文链接</a>
-    <p>[2] Effective Extraction of Cr(VI) from Hazardous Gypsum Sludge via Controlling the Phase Transformation and Chromium Species, <i>Environmental Science & Technology</i> (SCI一区IF: 9.028), 2018年, 第二作者。<a href="https://doi.org/10.1021/acs.est.8b02213">论文链接</a>
-    <p>[3] Emerging investigator series: treatment and recycling of heavy metals from nanosludge, <i>Environmental Science: Nano</i> (SCI一区IF: 8.131), 2019年, 第三作者。<a href="https://doi.org/10.1039/c9en00120d">论文链接</a>
-    <p>[4] Crystal regulation of gypsum via hydrothermal treatment with hydrogen ion for Cr(VI) extraction, <i>Journal of Hazardous Materials</i> (SCI一区 IF: 10.588), 2020年, <b>第一作者</b>。<a href="https://doi.org/10.1016/j.jhazmat.2019.05.007">论文链接</a>
-    <p>[5] Identification of the key host phases of Cr in fresh chromite ore processing residue (COPR), <i>Science of the Total Environment</i> (SCI一区 IF: 7.963), 2020年, 第二作者。<a href="https://doi.org/10.1016/j.scitotenv.2019.135075">论文链接</a>
-    <p>[6] NaCl recovery from organic pollutants-containing salt waste via dual effects of aqueous two-phase systems (ATPS) and crystal regulation with acetone, <i>Journal of Cleaner Production</i>, (SCI一区 IF: 9.297), 2020年, 第二作者。<a href="https://doi.org/10.1016/j.jclepro.2020.121044">论文链接</a>
-    <p>[7] Selective recovery of Cr from electroplating nanosludge via crystal modification and dilute acid leaching, <i> Environmental Science: Nano </i>(SCI一区IF: 8.131), 2020年, <b>第一作者</b>。<a href="https://doi.org/10.1039/d0en00196a">论文链接</a>
-    <p>[8] Different Pathways for Cr(III) Oxidation: Implications for Cr(VI) Reoccurrence in Reduced Chromite Ore Processing Residue, <i>Environmental Science & Technology</i> (SCI一区IF: 9.028), 2020年, 第三作者。<a href="https://doi.org/10.1021/acs.est.0c01855">论文链接</a>
-    <p>[9] Simultaneous separation and immobilization of Cr(VI) from layered double hydroxide via reconstruction of the key phases, <i>Journal of Hazardous Materials</i> (SCI一区 IF: 10.588), 2021年, 第三作者。<a href="https://doi.org/10.1016/j.jhazmat.2021.125807">论文链接</a>
-    <p>[10] Efficient stabilization of arsenic in the arsenic-bearing lime-ferrate sludge by zero valent iron-enhanced hydrothermal treatment, <i>Chemical Engineering Journal</i> (SCI一区 IF: 13.273) 2021年, 第四作者。<a href="https://doi.org/10.1016/j.cej.2021.129683">论文链接</a>
-    <p>[11] Understanding and controlling the key phase transformation for selective extracting Ni and Cu from Cr-containing electroplating sludge, <i>Surface and Interface</i> (未分区 IF: 4.837) 2021年, 第三作者。<a href="https://doi.org/10.1016/j.surfin.2021.101090">论文链接</a>
-    <p>[12] Efficient removal of iron from red gypsum via synergistic regulation of gypsum phase transformation and iron speciation, <i>Science of the Total Environment</i> (SCI一区IF: 7.963) 2021年, 第二作者。<a href="https://doi.org/10.1016/j.scitotenv.2021.148319">论文链接</a></p>
-    <p>[13] Recovery of copper from printed circuit board (PCB) acidic etching wastewater: Ammonia regulates the crystallization of high valued copper salt, <i>Surface and Interface</i> (未分区 IF: 4.837) 2022年, 第二作者。<a href="https:doi.org/10.1016/j.surfin.2022.101969">论文链接</a></p>
+    <p> [1] Debromination of polybrominated diphenyl ethers (PBDEs) by zero valent zinc: Mechanisms and predicting descriptors, 
+      <i>Journal of Hazardous Materials</i> (SCI一区IF: 10.588), 2018年, 第七作者。<a href="https://doi.org/10.1016/j.jhazmat.2018.03.038">论文链接</a>
+    <p>[2] Effective Extraction of Cr(VI) from Hazardous Gypsum Sludge via Controlling the Phase Transformation and Chromium Species, 
+      <i>Environmental Science & Technology</i> (SCI一区IF: 9.028), 2018年, 第二作者。<a href="https://doi.org/10.1021/acs.est.8b02213">论文链接</a>
+    <p>[3] Emerging investigator series: treatment and recycling of heavy metals from nanosludge, <i>Environmental Science: Nano,
+      </i> (SCI一区IF: 8.131), 2019年, 第三作者。<a href="https://doi.org/10.1039/c9en00120d">论文链接</a>
+    <p>[4] Crystal regulation of gypsum via hydrothermal treatment with hydrogen ion for Cr(VI) extraction, 
+      <i>Journal of Hazardous Materials</i> (SCI一区 IF: 10.588), 2020年, <b>第一作者</b>。<a href="https://doi.org/10.1016/j.jhazmat.2019.05.007">论文链接</a>
+    <p>[5] Identification of the key host phases of Cr in fresh chromite ore processing residue (COPR), 
+      <i>Science of the Total Environment</i> (SCI一区 IF: 7.963), 2020年, 第二作者。<a href="https://doi.org/10.1016/j.scitotenv.2019.135075">论文链接</a>
+    <p>[6] NaCl recovery from organic pollutants-containing salt waste via dual effects of aqueous two-phase systems (ATPS) and crystal regulation with acetone, 
+      <i>Journal of Cleaner Production</i>, (SCI一区 IF: 9.297), 2020年, 第二作者。<a href="https://doi.org/10.1016/j.jclepro.2020.121044">论文链接</a>
+    <p>[7] Selective recovery of Cr from electroplating nanosludge via crystal modification and dilute acid leaching, <i> Environmental Science: Nano 
+      </i>(SCI一区IF: 8.131), 2020年, <b>第一作者</b>。<a href="https://doi.org/10.1039/d0en00196a">论文链接</a>
+    <p>[8] Different Pathways for Cr(III) Oxidation: Implications for Cr(VI) Reoccurrence in Reduced Chromite Ore Processing Residue, 
+      <i>Environmental Science & Technology</i> (SCI一区IF: 9.028), 2020年, 第三作者。<a href="https://doi.org/10.1021/acs.est.0c01855">论文链接</a>
+    <p>[9] Simultaneous separation and immobilization of Cr(VI) from layered double hydroxide via reconstruction of the key phases, 
+      <i>Journal of Hazardous Materials</i> (SCI一区 IF: 10.588), 2021年, 第三作者。<a href="https://doi.org/10.1016/j.jhazmat.2021.125807">论文链接</a>
+    <p>[10] Efficient stabilization of arsenic in the arsenic-bearing lime-ferrate sludge by zero valent iron-enhanced hydrothermal treatment, 
+      <i>Chemical Engineering Journal</i> (SCI一区 IF: 13.273) 2021年, 第四作者。<a href="https://doi.org/10.1016/j.cej.2021.129683">论文链接</a>
+    <p>[11] Understanding and controlling the key phase transformation for selective extracting Ni and Cu from Cr-containing electroplating sludge, 
+      <i>Surface and Interface</i> (未分区 IF: 4.837) 2021年, 第三作者。<a href="https://doi.org/10.1016/j.surfin.2021.101090">论文链接</a>
+    <p>[12] Efficient removal of iron from red gypsum via synergistic regulation of gypsum phase transformation and iron speciation, 
+      <i>Science of the Total Environment</i> (SCI一区IF: 7.963) 2021年, 第二作者。<a href="https://doi.org/10.1016/j.scitotenv.2021.148319">论文链接</a></p>
+    <p>[13] Recovery of copper from printed circuit board (PCB) acidic etching wastewater: Ammonia regulates the crystallization of high valued copper salt, 
+      <i>Surface and Interface</i> (未分区 IF: 4.837) 2022年, 第二作者。<a href="https://doi.org/10.1016/j.surfin.2022.101969">论文链接</a></p>
    </div> 
       <p style="text-align: center; line-height:0px"><b>---------------------------------</b></p> 
 
